examples/quarkus-quickstart/quarkus-with-java-maven-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: csi-based-tool-provider-test
spec:
  to:
    kind: Service
    name: csi-based-tool-provider-test
  port:
    targetPort: http
  wildcardPolicy: None
